# pylopt

./: HOWTO.md  HowToDo.md  MANIFEST.in  Makefile  README.md  RELEASE_NOTES.md  push_all.sh  pyproject.toml  requirements.txt  setup.cfg
artefacts/: bilevel_optimisation-1.0.0-py3-none-any.whl  bilevel_optimisation-1.1.0-py3-none-any.whl  logsumexp-0.0.0-cp312-cp312-linux_x86_64.whl
docs/: bilevel_optimisation.bilevel.rst  bilevel_optimisation.data.rst  bilevel_optimisation.dataset.rst  bilevel_optimisation.energy.rst  bilevel_optimisation.evaluation.rst  bilevel_optimisation.factories.rst  bilevel_optimisation.fields_of_experts.rst  bilevel_optimisation.gaussian_mixture_model.rst  bilevel_optimisation.losses.rst  bilevel_optimisation.measurement_model.rst  bilevel_optimisation.optimiser.rst  bilevel_optimisation.potential.rst  bilevel_optimisation.projection.rst  bilevel_optimisation.rst  bilevel_optimisation.solver.rst  bilevel_optimisation.utils.rst  bilevel_optimisation.visualisation.rst  conf.py  index.rst  modules.rst  stochastic_bilevel_optimisation.bilevel.Bilevel.rst  stochastic_bilevel_optimisation.bilevel.rst  stochastic_bilevel_optimisation.data.LogLevel.rst  stochastic_bilevel_optimisation.data.OptimiserSpec.rst  stochastic_bilevel_optimisation.data.ParamSpec.rst  stochastic_bilevel_optimisation.data.SolverData.rst  stochastic_bilevel_optimisation.data.SolverSpec.rst  stochastic_bilevel_optimisation.data.rst  stochastic_bilevel_optimisation.dataset.ImageDataset.rst  stochastic_bilevel_optimisation.dataset.rst  stochastic_bilevel_optimisation.energy.InnerEnergy.rst  stochastic_bilevel_optimisation.energy.rst  stochastic_bilevel_optimisation.evaluation.Evaluation.rst  stochastic_bilevel_optimisation.evaluation.rst  stochastic_bilevel_optimisation.factories.BuildFactory.rst  stochastic_bilevel_optimisation.factories.rst  stochastic_bilevel_optimisation.fields_of_experts.rst  (+35 more)
(+180 files in other folders)
