[metadata]
name = bilevel-optimisation
version = attr: bilevel_optimisation.__version__
author = 'xxx'
author_email = 'xxx'
description = 'A torch-based package for bilevel optimisation'
license = MIT
classifiers =
    Programming Language :: Python :: 3

[options]
packages = find:
include_package_data = True
python_requires = >=3.11
install_requires =
    torch>=2.6.0
    numpy>=2.0.2
    confuse>=2.0.1
    scipy>=1.15.2
    opencv-python-headless>=4.11.0.86
    matplotlib>=3.10.1
    PyQt5>=5.15.11
    torchvision>=0.21.0
    pillow>=11.1.0

[options.packages.find]
exclude =
    tests
    tests.*
    bilevel_optimisation.trash
    bilevel_optimisation.trash.*



